# query.py

./: .gitignore  README.rst  example.py  pyproject.toml
query_py/: query.py
tests/: test_query_py.py
