[tool.poetry]
name = "query.py"
version = "0.1.0"
description = "A wrapper over database drivers for improving SQL experience with Python"
authors = ["Ricardo Gomes <desk467@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^2.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
rope = "^0.16.0"
flake8 = "^3.7.9"
coverage = "^5.0.3"
autopep8 = "^1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
